--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,35 @@
     width: 100%;
 }
 
+.navbar{
+    background-color: #8C031C;
+}
+
+.navbar-brand{
+    font-family: 'Dancing Script', cursive;
+    font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.15rem;
+}
+
+.nav-item{
+    margin-left: 7rem;
+    font-weight: 600;
+    color: white;
+}
+
+.nav-item:hover{
+    margin-left: 7rem;
+    font-weight: 700;
+    color:cornsilk;
+}
+
 .img-curve{
     border-radius: 15px;
 }
 
 .text-right{
-    text-align: right;
+    text-align: center;
 }
 
 .text-center{
@@ -57,14 +80,15 @@ a:hover{
 }
 
 .btn-primary{
-    background-color: #ff6b81;
+    background-color: #590817;
     color: white;
     cursor: pointer;
+    padding: 0.5rem;
 }
 
 .btn-primary:hover{
     color: white;
-    background-color: #ff4757;
+    background-color: #6d0518;
 }
 
 h2{
@@ -85,6 +109,11 @@ h3{
     position: absolute;
     bottom: 50px;
     left: 40%;
+    font-weight: 600;
+    font-size: 3rem;
+    font-family: 'Dancing Script';
+    text-shadow: 2px 2px 8px black;
+    letter-spacing: 0.2rem;
 }
 
 fieldset{
@@ -97,15 +126,18 @@ fieldset{
 
 /* CSSS for navbar section */
 .logo{
-    width: 10%;
-    float: left;
+    width:5%;
+    height:auto;
+    margin-left: 2rem;
 }
 
 .menu{
-    line-height: 60px;
+    display: flex;
+    justify-content: start;
+    /* align-items: center; */
 }
 
-.menu ul{
+/* .menu ul{
     list-style-type: none;
 }
 
@@ -113,17 +145,18 @@ fieldset{
     display: inline;
     padding: 1%;
     font-weight: bold;
-}
+} */
 
 
 /* CSS for Food SEarch Section */
 
 .food-search{
-    background-image: url(../images/bg.jpg);
+    background-image: url('https://cdn.pixabay.com/photo/2015/06/08/15/02/breakfast-801827_960_720.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center ;
     padding: 7% 0;
+    width: 100%;
 }
 
 .food-search input[type="search"]{
@@ -140,10 +173,29 @@ fieldset{
     padding: 4% 0;
 }
 
+.img-category{
+    position: absolute;
+    float: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center ;
+    border-radius: 1rem;
+    width: 100%;
+    height: auto;
+}
+
+.img-category-text{
+    position: relative;
+    background-position: center ;
+    margin-top: 9rem;
+
+}
+
 .box-3{
     width: 28%;
     float: left;
     margin: 2%;
+    margin-right: 2.5rem;
 }
 
 
@@ -213,14 +265,30 @@ fieldset{
     font-weight: bold;
 }
 
+.navbar-toggler-icon{
+    color: white;
+}
+
 
 /* CSS for Mobile Size or Smaller Screen */
 
 @media only screen and (max-width:768px){
+    .navbar{
+        width: 100%;
+    }
+
+    .nav-item{
+        margin-left: 3rem;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
+
     .logo{
-        width: 80%;
+        width: 12%;
         float: none;
-        margin: 1% auto;
+        /* margin: 1% auto; */
+        /* min-width: 15%;
+        max-width: 15%; */
     }
 
     .menu ul{
@@ -228,7 +296,7 @@ fieldset{
     }
 
     .food-search input[type="search"]{
-        width: 90%;
+        width: 100%;
         padding: 2%;
         margin-bottom: 3%;
     }
@@ -240,6 +308,7 @@ fieldset{
 
     .food-search{
         padding: 10% 0;
+        width: 100%;
     }
 
     .categories{
