--- a/css/style.css
+++ b/css/style.css
@@ -15,12 +15,38 @@
     width: 100%;
 }
 
+.navbar{
+    background-color: #8C031C;
+}
+
+.navbar-brand{
+    font-style: italic;
+    font-family: 'Merienda', cursive;
+    font-size: 1.7rem;
+    font-weight: 600;
+    letter-spacing: 0.15rem;
+    margin-left:0.5rem;
+}
+
+.nav-item{
+    margin-left: 7rem;
+    font-weight: 600;
+    color: white;
+    letter-spacing: 2px;
+}
+
+.nav-item:hover{
+    margin-left: 7rem;
+    font-weight: 700;
+    color:cornsilk;
+}
+
 .img-curve{
     border-radius: 15px;
 }
 
 .text-right{
-    text-align: right;
+    text-align: center;
 }
 
 .text-center{
@@ -33,6 +59,7 @@
 
 .text-white{
     color: white;
+    text-shadow: 2px 2px 8px black;
 }
 
 .clearfix{
@@ -57,14 +84,15 @@ a:hover{
 }
 
 .btn-primary{
-    background-color: #ff6b81;
+    background-color: #590817;
     color: white;
     cursor: pointer;
+    padding: 0.5rem;
 }
 
 .btn-primary:hover{
     color: white;
-    background-color: #ff4757;
+    background-color: #6d0518;
 }
 
 h2{
@@ -84,7 +112,13 @@ h3{
 .float-text{
     position: absolute;
     bottom: 50px;
-    left: 40%;
+    left: 35%;
+    font-weight: 600;
+    font-size: 2rem;
+    font-family: 'Merienda';
+    text-shadow: 2px 2px 8px black;
+    letter-spacing: 0.2rem;
+    /* min-width: 10%; */
 }
 
 fieldset{
@@ -97,15 +131,18 @@ fieldset{
 
 /* CSSS for navbar section */
 .logo{
-    width: 10%;
-    float: left;
+    width:5%;
+    height:auto;
+    margin-left: 2rem;
 }
 
 .menu{
-    line-height: 60px;
+    display: flex;
+    justify-content: start;
+    /* align-items: center; */
 }
 
-.menu ul{
+/* .menu ul{
     list-style-type: none;
 }
 
@@ -113,17 +150,31 @@ fieldset{
     display: inline;
     padding: 1%;
     font-weight: bold;
-}
+} */
+.navbar-toggler{
+    width: 47px;
+    height: 34px;
+    background-color: #8C031C;
+    margin-right: 1.8%;
+    }
 
+.navbar-toggler .line{
+    width: 100%;
+    float: left;
+    height: 2px;
+    background-color: #fff;
+    margin-bottom: 5px;
+    }
 
 /* CSS for Food SEarch Section */
 
 .food-search{
-    background-image: url(../images/bg.jpg);
+    background-image: url('https://cdn.pixabay.com/photo/2015/06/08/15/02/breakfast-801827_960_720.jpg');
     background-size: cover;
     background-repeat: no-repeat;
-    background-position: center;
+    background-position: center ;
     padding: 7% 0;
+    width: 100%;
 }
 
 .food-search input[type="search"]{
@@ -134,10 +185,26 @@ fieldset{
     border-radius: 5px;
 }
 
-
 /* CSS for Categories */
 .categories{
     padding: 4% 0;
+}
+
+.img-category{
+    position: absolute;
+    float: left;
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center ;
+    border-radius: 1rem;
+    width: 100%;
+    height: auto;
+}
+
+.img-category-text{
+    position: relative;
+    background-position: center ;
+    margin-top: 9rem;
 }
 
 .box-3{
@@ -145,7 +212,6 @@ fieldset{
     float: left;
     margin: 2%;
 }
-
 
 /* CSS for Food Menu */
 .food-menu{
@@ -209,18 +275,33 @@ fieldset{
 }
 
 .order-label{
-    margin-bottom: 1%; 
+    margin-bottom: 1%;
     font-weight: bold;
 }
+
 
 
 /* CSS for Mobile Size or Smaller Screen */
 
 @media only screen and (max-width:768px){
+    .navbar{
+        width: 100%;
+    }
+
+    .nav-item{
+        margin-left: 3rem;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
+    }
+
+
     .logo{
-        width: 80%;
+        width: 11%;
         float: none;
-        margin: 1% auto;
+        margin-left: 0.50rem;
+        /* margin: 1% auto; */
+        /* min-width: 15%;
+        max-width: 15%; */
     }
 
     .menu ul{
@@ -228,18 +309,24 @@ fieldset{
     }
 
     .food-search input[type="search"]{
-        width: 90%;
+        width: 80%;
         padding: 2%;
         margin-bottom: 3%;
     }
 
+    .float-text{
+        font-size: 3rem;
+        left: 30%;
+    }
+
     .btn{
-        width: 91%;
+        width: 50%;
         padding: 2%;
     }
 
     .food-search{
         padding: 10% 0;
+        width: 100%;
     }
 
     .categories{
@@ -260,7 +347,7 @@ fieldset{
     }
 
     .food-menu-box{
-        width: 90%;
+        width: 100%;
         padding: 5%;
         margin-bottom: 5%;
     }
