--- a/css/style.css
+++ b/css/style.css
@@ -26,20 +26,22 @@
     font-weight: 600;
     letter-spacing: 0.15rem;
     margin-left:0.5rem;
+    
 }
 
 .nav-item{
-    margin-left: 7rem;
+    margin-left: 5rem;
     font-weight: 600;
     color: white;
     letter-spacing: 2px;
 }
 
 .nav-item:hover{
-    margin-left: 7rem;
+    margin-left: 5rem;
     font-weight: 700;
     color:cornsilk;
 }
+
 
 .img-curve{
     border-radius: 15px;
@@ -138,8 +140,8 @@ fieldset{
 
 .menu{
     display: flex;
-    justify-content: start;
-    /* align-items: center; */
+    justify-content: flex-end;
+    margin-right: 30px;
 }
 
 /* .menu ul{
@@ -156,6 +158,19 @@ fieldset{
     height: 34px;
     background-color: #8C031C;
     margin-right: 1.8%;
+    outline: none;
+    box-shadow: none;
+    border-color: white !important;
+    }
+
+.navbar-toggler .collapse{
+    width: 47px;
+    height: 34px;
+    background-color: #8C031C;
+    margin-right: 1.8%;
+    outline: none;
+    box-shadow: none;
+    border-color: white !important;
     }
 
 .navbar-toggler .line{
@@ -164,7 +179,16 @@ fieldset{
     height: 2px;
     background-color: #fff;
     margin-bottom: 5px;
+    outline: none;
+    box-shadow: none;
+    border-color: white;
     }
+
+  
+
+    
+
+    
 
 /* CSS for Food SEarch Section */
 
@@ -279,6 +303,26 @@ fieldset{
     font-weight: bold;
 }
 
+/*scroll bar*/
+/* width */
+::-webkit-scrollbar {
+    width: 10px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+background: #f1f1f1; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+background: #590817; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+background: #8C031C; 
+}
 
 
 /* CSS for Mobile Size or Smaller Screen */
@@ -289,7 +333,7 @@ fieldset{
     }
 
     .nav-item{
-        margin-left: 3rem;
+        margin-left: 1rem;
         margin-bottom: 1rem;
         margin-top: 1rem;
     }
@@ -303,6 +347,17 @@ fieldset{
         /* min-width: 15%;
         max-width: 15%; */
     }
+
+    .navbar-brand{
+        font-style: italic;
+        font-family: 'Merienda', cursive;
+        font-size: 1.7rem;
+        font-weight: 600;
+        letter-spacing: 0.15rem;
+        /* margin-left:0.5rem; */
+        margin:0;
+    }
+
 
     .menu ul{
         text-align: center;
@@ -372,5 +427,32 @@ fieldset{
         border-bottom: 1px solid black;
         padding: 1%;
         text-align: left;
+    }
+    
+    .menu{
+        display: flex;
+        justify-content: flex-start;
+    }
+
+    .sweet-alert{
+        /* width:850px !important; */
+        /* height: 100px; */
+        top: 70rem;
+    }
+    
+}
+
+@media screen and (max-width: 989px ) and (min-width: 769px) {
+    .menu{
+        display: flex;
+        justify-content: flex-start;
+        
+    }
+
+    .nav-item{
+        margin-left: 1.4rem;
+        left:0;
+        margin-bottom: 1rem;
+        margin-top: 1rem;
     }
 }
