--- a/css/style.css
+++ b/css/style.css
@@ -356,6 +356,7 @@ background: #8C031C;
         letter-spacing: 0.15rem;
         /* margin-left:0.5rem; */
         margin:0;
+        text-shadow: 2px 2px 8px black;
     }
 
 
