--- a/css/style.css
+++ b/css/style.css
@@ -26,7 +26,7 @@
     font-weight: 600;
     letter-spacing: 0.15rem;
     margin-left:0.5rem;
-    
+    text-shadow: 2px 2px 8px black;
 }
 
 .nav-item{
