--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,8 @@
 
 .navbar-brand{
     font-style: italic;
-    font-family: 'Merienda', cursive;
-    font-size: 1.7rem;
+    font-family: 'Tangerine', cursive;
+    font-size: 2.4rem;
     font-weight: 600;
     letter-spacing: 0.15rem;
     margin-left:0.5rem;
@@ -119,8 +119,8 @@ h3{
     bottom: 50px;
     left: 35%;
     font-weight: 600;
-    font-size: 2rem;
-    font-family: 'Merienda';
+    font-size: 3.3rem;
+    font-family: 'Tangerine', cursive;
     text-shadow: 2px 2px 8px black;
     letter-spacing: 0.2rem;
     /* min-width: 10%; */
@@ -358,7 +358,7 @@ background: #8C031C;
 
     .navbar-brand{
         font-style: italic;
-        font-family: 'Merienda', cursive;
+        font-family: 'Tangerine', cursive;
         font-size: 1.7rem;
         font-weight: 600;
         letter-spacing: 0.15rem;
@@ -378,7 +378,7 @@ background: #8C031C;
     }
 
     .float-text{
-        font-size: 3rem;
+        font-size: 3.3rem;
         left: 30%;
     }
 
